# the-flight-managerment-system

./: CMakeLists.txt  Control.qml  DBManager.cpp  DBManager.h  LICENSE  Login.qml  Main.qml  README.md  images.qrc  main.cpp
Components/: FlightInformationCard.qml  FlightManageCard.qml  MyFavouriteFlightCard.qml  MyFlightCard.qml  SharedCard.qml  UserCard.qml
Pages/: AboutUs.qml  AdminChangeFlightInformation.qml  AdminSettings.qml  Discovery.qml  FlightManage.qml  Login.qml  Main.qml  MyFavouriteFlight.qml  MyFlight.qml  OrderManage.qml  RootContainer.qml  SearchFlight.qml  TravelShare.qml  UserData.qml  UserManage.qml
